Product Cart Order complete & Admin Remaining

--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -2,14 +2,21 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000/",
   "dependencies": {
     "@material-ui/core": "^4.12.3",
+    "@material-ui/data-grid": "^4.0.0-alpha.37",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
+    "@stripe/react-stripe-js": "^1.7.0",
+    "@stripe/stripe-js": "^1.22.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
+    "country-state-city": "^3.0.1",
+    "js-cookie": "^3.0.1",
+    "jspdf": "^2.5.0",
     "overlay-navbar": "^1.0.4",
     "react": "^17.0.2",
     "react-alert": "^7.0.3",
@@ -20,13 +27,13 @@
     "react-icons": "^4.2.0",
     "react-js-pagination": "^3.0.3",
     "react-material-ui-carousel": "^2.3.8",
-    "react-rating-stars-component": "^2.2.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
+    "stripe": "^8.199.0",
     "web-vitals": "^1.1.2",
     "webfontloader": "^1.6.28"
   },
@@ -53,6 +60,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "proxy": "http://127.0.0.1:5000"
+  }
 }
