--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.1",
+    "cloudinary": "^1.26.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
@@ -19,11 +20,13 @@
     "dotenv": "^10.0.0",
     "esm": "^3.2.25",
     "express": "^4.17.2",
+    "express-fileupload": "^1.2.1",
     "googleapis": "^92.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.4",
     "nodemailer": "^6.7.2",
     "nodemon": "^2.0.15",
+    "stripe": "^8.199.0",
     "validator": "^13.7.0"
   }
 }
