--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,6 +14,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
+    "chart.js": "^3.7.0",
     "country-state-city": "^3.0.1",
     "js-cookie": "^3.0.1",
     "jspdf": "^2.5.0",
@@ -21,7 +22,7 @@
     "react": "^17.0.2",
     "react-alert": "^7.0.3",
     "react-alert-template-basic": "^1.0.2",
-    "react-chartjs-2": "^3.0.4",
+    "react-chartjs-2": "^3.3.0",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
